2001-11-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-replace): Don't use `save-excursion' because
	point at start time may be deleted at end time.
	(w3m-form-textarea-info): Use `w3m-get-text-property-around'.

2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-ftp-url): Rewrote.
	(w3m-download): Use `w3m-goto-ftp-url' for ftp files.

	* w3m-e20.el (w3m-make-ccl-coding-system): Copied from w3m-fsf.el;
	don't call `make-coding-system' if a coding-system already exists.
	* w3m-e21.el (w3m-make-ccl-coding-system): Moved from w3m-fsf.el.
	* w3m-fsf.el (w3m-make-ccl-coding-system): Moved to w3m-e21.el.

2001-11-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top): Removed autoload of `w3m-remove-image'.

	* w3m-om.el (w3m-remove-image): Define as a dummy function.

	* w3m-e20.el (w3m-remove-image): Define as a dummy function.

	* w3m.el (w3m-quick-start): New option.
	(w3m-input-url): When the default string is equal to nil, it is
	not displayed in the prompt.
	(w3m): Refer `w3m-quick-start' to decide the action when
	interactively called.

2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-current-title, w3m-current-url): Define them before
	loading the version specific modules.

2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-vinelinux.el: Changed the coding system of this file
	to iso-2022-7bit.

	* w3m-xmas.el (format-buffers-tab-line): Protect aginst errors
	caused by the illegal type of `w3m-current-url'.

	* w3m-e21.el (top): Define `w3m-current-url' and
	`w3m-current-title' to avoid byte-compile warnings.
	(w3m-insert-header-line): Protect aginst errors caused by the
	illegal type of `w3m-current-url'.
	(w3m-tab-line): Protect aginst errors caused by illegal types of
	`w3m-current-url' and `w3m-current-title'.

2001-11-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (format-buffers-tab-line): Don't use the value of
	`w3m-current-title' if it is nil.
