@@ -2,6 +2,7 @@
 
 	* w3m-form.el (w3m-form-replace): Don't use `save-excursion' because
 	point at start time may be deleted at end time.
+	(w3m-form-textarea-replace): Ditto.
 	(w3m-form-textarea-info): Use `w3m-get-text-property-around'.
 
 2001-11-08  Katsumi Yamaoka  <yamaoka@jpl.org>
